--- a/src/index.html
+++ b/src/index.html
@@ -3,51 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Accessible Map</title>
-    <style>
-        html,
-        body {
-
-            width: 100%;
-            height: 100%;
-            padding: 0;
-            margin: 0;
-
-        }
-
-        .map {
-            width: 100%;
-            height: 100%;
-        }
-
-        a.skiplink {
-            position: absolute;
-            clip: rect(1px, 1px, 1px, 1px);
-            padding: 0;
-            border: 0;
-            height: 1px;
-            width: 1px;
-            overflow: hidden;
-        }
-
-        a.skiplink:focus {
-            clip: auto;
-            height: auto;
-            width: auto;
-            background-color: #fff;
-            padding: 0.3em;
-        }
-
-        #map:focus {
-            outline: #4A74A8 solid 0.15em;
-        }
-    </style>
+    <title>Little Navmap - openlayers</title>
 </head>
 
 <body>
     <div id="map" class="map"></div>
-    <div id="pointer_overlay"></div>
-    <div id="debug">HHUH</div>
+    <div id="debug"></div>
 </body>
 
 </html>
